
      - Fixed hlp.bat bug related to the behaviour change of %~pA.

      - Fixed bug that caused Dos9 not to append a / after disc in %~dpA.

      - Added a /C:MD file to generate html files compatible with pico

WEDNESDAY 11TH, APRIL

      - Fixed error on handling 2>&1 redirection.

      - Fixed Dos9_FilePath.c error that led Dos9 to check for file before 
        using %PATHEXT%.

SUNDAY 23RD, APRIL

      - Changed conditional operators and redirections semantics (ie. 
        conditional operators now own precedence over redirections, just the 
        regular cmd-way).

      - Fixed an error with file search not using libcu8.

      - Fixed some typos on english manual.

      - Fixed compatibility issue due to msvcrt inconsistent structures name 
        for finddata and stat.

THURSDAY 26TH, APRIL

      - Fixed some manual pages.

      - Fixed additional Dos9_CloseThread() bug on unices.

      - Fixed memory leak in Dos9_InitEnv().

      - Fixed some FOR commands bug using Dos9_EsToFullPath().

      - Fixed some invalid casts in search functions.

SATURDAY 29TH, APRIL

      - Fixed a memory leak.

      - Changed version to 218.1

      - Fixed Dos9_RunExternalCommand() which add a pretty big footprint on 
        the stack, sometimes causing stack overflows with Musl libc.

TUESDAY 15TH, MAY

      - Added new build system based on femto.

      - Fixed text files.

      - Fixed a great lot of typos.

      - Extended documentation.

      - Added the possibility of using unix-style switches with tea due to 
        problems of mingw that mangled the slash of switches.

      - Fixed a bug of the DEL command. If the required file refers to a dir, 
        the same behaviour as the one used with DIR is used so that files 
        inside that dir get deleted.

THURSDAY 17TH, MAY

      - Fixed CTRC-C handling. Sadly the new multi-thread implementation makes 
        it impossible to grab any current directory or modified environment.
