@@ -46,6 +46,7 @@
 #include "Dos9_FdInheritance.h"
 #include "Dos9_ReadScript.h"
 #include "Dos9_Clone.h"
+#include "Dos9_EnvStack.h"
 
 #include "Dos9_Globals.h"
 
