@@ -1990,3 +1990,12 @@ THURSDAY 17TH, MAY
       - Fixed CTRC-C handling. Sadly the new multi-thread implementation makes 
         it impossible to grab any current directory or modified environment.
 
+TUESDAY 22ND, MAY
+
+      - Fixed Mutex locking error in the SET command.
+
+      - Modify GOTO and EXIT to leave %ERROLEVEL% unmodified upon execution.
+
+      - Added the local variable environment creation via SETLOCAL and 
+        ENDLOCAL.
+
